# compass

./: Cargo.toml  Justfile  build.rs
assets/: comparison.etac  comparison.tac  conditional.etac  fibonacci.etac  fibonacci.tac  floats.etac  function.etac  test.etac  vars.etac
src/: lib.rs  main.rs
src/ast/: context.rs  mod.rs
src/cli/: emit.rs  mod.rs
src/codegen/: context.rs  mod.rs
src/codegen/mips/: mod.rs
src/lexer/: mod.rs  tokens.rs  types.rs
src/lexer/traits/: display.rs  iterator.rs  mod.rs
src/parser/: compass_grammar.lalrpop  mod.rs
src/utils/: mod.rs
tests/ast/: conditionals.rs  mod.rs  variables.rs
tests/ast/snapshots/: r#mod__ast__variables__should_assign_f32-2.snap  r#mod__ast__variables__should_assign_f32-3.snap  r#mod__ast__variables__should_assign_f32-4.snap  r#mod__ast__variables__should_assign_f32-5.snap  r#mod__ast__variables__should_assign_f32-6.snap  r#mod__ast__variables__should_assign_f32-7.snap  r#mod__ast__variables__should_assign_f32.snap  r#mod__ast__variables__should_assign_f64-2.snap  r#mod__ast__variables__should_assign_f64-3.snap  r#mod__ast__variables__should_assign_f64-4.snap  r#mod__ast__variables__should_assign_f64.snap  r#mod__ast__variables__should_assign_i32-2.snap  r#mod__ast__variables__should_assign_i32.snap  r#mod__ast__variables__should_assign_sum_of_i32-2.snap  r#mod__ast__variables__should_assign_sum_of_i32.snap  r#mod__ast__variables__should_mismatch_type_f32-2.snap  r#mod__ast__variables__should_mismatch_type_f32.snap  r#mod__ast__variables__should_mismatch_type_i32-2.snap  (+1 more)
