[package]
name = "compass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
logos = { version = "0.13", features = ["logos-derive"] }
ariadne = { version = "0.3.0", features = ["auto-color"] }
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
clap = { version = "4.4.7", features = ["derive", "unicode"] }
